Use unmodifiable Map in AbstractNamespaceStorage
Switch away from ImmutableMap, as Java provides the equivalent.

Change-Id: Ic9070619f5b59582ada920163b78d28459e8ee11
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>